--- a/src/containers/search/search.scss
+++ b/src/containers/search/search.scss
@@ -1,11 +1,53 @@
 .search-container {
 
-  .hightlight-result {
-    //color: #
+  .highlight-result {
+    background: #ffe5b5; //#f4b8a2;
   }
+
+  .btn-show-more {
+    width: 100%;
+  }
+}
+
+
+.drawer-inspector {
 
   .highlight-result {
     background: #ffe5b5; //#f4b8a2;
-    //box-shadow: 0 0 0 #f4b8a2, 0 0 0 #f4b8a2;
   }
+
+  .full-subtitle-container {
+    position: relative;
+    border: 1px solid #eee;
+    width: 500px;
+    height: 250px;
+    overflow-y: scroll;
+
+    .line {
+      position: absolute;
+      padding: 2px 6px;
+      background-color: #f8f8f8;
+      width: 100%;
+
+      .start-time {
+        float: right;
+        font-size: 10px;
+        line-height: 16px;
+        margin-right: 20px;
+        visibility: hidden;
+      }
+
+      &:hover {
+
+        .start-time {
+          visibility: visible;
+        }
+
+      }
+    }
+  }
+}
+
+.btn-close-drawer {
+  margin: 10px 0 0 40px;
 }
